# multisig-cli

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  flake.nix
.github/workflows/: ci.yml  release.yml
docs/: ci-release.md  cli-reference.md  mainnet-operator-checklist.md  templates.md  trust-policy.md
examples/: local-development.md
scripts/: devnet-smoke.sh  release-dry-run.sh
src/: error.rs  instruction_builder.rs  lib.rs  main.rs  sanitize.rs
src/application/: config_tx.rs  context.rs  inspect.rs  mod.rs  multisig.rs  pipeline.rs  program_upgrade.rs  proposal.rs  rent.rs  template.rs  transfer.rs  vault_tx.rs
src/cli/: config.rs  help.rs  member.rs  mod.rs  multisig.rs  program.rs  proposal.rs  rent.rs  template.rs  transfer.rs  tx.rs  vault.rs
src/domain/: mod.rs  multisig.rs  proposal.rs  serde_pubkey.rs  transaction.rs
src/infra/: address_lookup_table.rs  instruction.rs  mod.rs  pda.rs
src/infra/accounts/: config_tx.rs  discriminators.rs  mod.rs  multisig.rs  proposal.rs  reader.rs  vault_tx.rs
src/infra/config/: file.rs  labels.rs  mod.rs  tokens.rs
src/infra/rpc/: methods.rs  mod.rs  retry.rs  types.rs
src/infra/signer/: keypair.rs  ledger.rs  mod.rs  offline.rs
src/output/: json.rs  mod.rs  table.rs
src/tui/: app.rs  format.rs  mod.rs  theme.rs
src/tui/screens/: create.rs  dashboard.rs  mod.rs  palette.rs  proposals.rs  selector.rs  setup.rs
src/tui/widgets/: input.rs  status_bar.rs
